tests/baselines/reference/numeric-followed-by-ident.errors.txt
numeric-followed-by-ident.ts(17,2): error TS1351: An identifier or keyword cannot immediately follow a numeric literal.


==== numeric-followed-by-ident.ts (1 errors) ====
    // Copyright (C) 2018 Mozilla. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: sec-literals-numeric-literals
    description: >
      NumericLiteral followed by IdentifierStart
    info: |
      The source character immediately following a NumericLiteral must not be an IdentifierStart or DecimalDigit.
    
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    3in []
     ~~
!!! error TS1351: An identifier or keyword cannot immediately follow a numeric literal.
    